Tabs attached to window edge with only top spacing; fix close button

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -10,17 +10,15 @@ $width-xs: 100% !default;
 $sidebar-z-index: 2000 !default;
 $sidebar-transition: 250ms !default;
 
-$tab-size: 40px !default;
+$tab-size: 36px !default;
 $tab-font-size: 12pt !default;
 $tab-bg: null !default;
 $tab-transition: 80ms !default;
-
-$header-fg: $tab-active-fg !default;
-$header-bg: $tab-active-bg !default;
-
+$header-fg: $tab-active-bg !default;
+$header-bg: $tabs-bg !default;
 $content-bg: rgba(255, 255, 255, 0.95) !default;
 $content-padding-vertical: 10px !default;
-$content-padding-horizontal: 20px !default;
+$content-padding-horizontal: 10px !default;
 
 .leaflet-sidebar-flex-row {
     display: flex;
@@ -119,8 +117,8 @@ $content-padding-horizontal: 20px !default;
 
     height: 100%;
     */
-    top: 0;
-    bottom: 0;
+    top: $sidebar-margins;
+    bottom: $sidebar-margins;
     height: auto;
     z-index: 2001;
 
@@ -135,16 +133,10 @@ $content-padding-horizontal: 20px !default;
     }
 
     background-color: $tabs-bg;   
-    transition: background-color $sidebar-transition;
 
     &.collapsed {
         background-color: transparent;
     }
-    /*
-    transition: background-color $tab-transition;
-    transition: background-color $tab-transition $sidebar-transition;
-    */
-
 
     &, & > ul {
         position: absolute;
@@ -155,6 +147,8 @@ $content-padding-horizontal: 20px !default;
         padding: 0;
 
         list-style-type: none;
+
+        background-color: $tabs-bg;
 
         & > li {
             width: 100%;
@@ -168,8 +162,6 @@ $content-padding-horizontal: 20px !default;
             overflow: hidden;
 
             transition: all $tab-transition;
-
-            background-color: $tabs-bg;
 
             &:hover {
                 color: $tab-hover-fg;
@@ -261,7 +253,6 @@ $content-padding-horizontal: 20px !default;
 
     left: 0;
     right: 0;
-    box-sizing: border-box;
 
     padding: $content-padding-vertical $content-padding-horizontal;
 
@@ -288,30 +279,23 @@ $content-padding-horizontal: 20px !default;
 .leaflet-sidebar-header {
     margin: (-$content-padding-vertical) (-$content-padding-horizontal) 0;
     height: $tab-size;
-    padding: 0 $content-padding-horizontal;
     line-height: $tab-size;
     font-size: $tab-font-size * 1.2;
     color: $header-fg;
     background-color: $header-bg;
-
-    .leaflet-sidebar-right & {
-        padding-left: $tab-size;
-    }
 }
 
 .leaflet-sidebar-close {
-    position: absolute;
-    top: 0;
     width: $tab-size;
     height: $tab-size;
     text-align: center;
     cursor: pointer;
 
     .leaflet-sidebar-left & {
-        right: 0;
+        float: right;
     }
 
     .leaflet-sidebar-right & {
-        left: 0;
+        float: left;
     }
 }
